tests/neg-macros/tasty-string-interpolator-position-a/Test_2.scala

import Macro._

object Test extends App {

  new StringContext().f2() // error

}
